# docusaurus.io-AI-new

./: README.md  docusaurus.config.ts  pyproject.toml  sidebars.ts
backend/: chatbot.py  document_processor.py  github_integration.py  main.py  requirements.txt  vector_store.py
docs/: docker-setup.md  hardware-setup.md  intro.md  troubleshooting.md
docs/Module-1/: Lesson-1-Your-First-Robot.md  Lesson-2-Move-Robot-Keyboard.md  Lesson-3-Talk-to-Robot-Parts.md  Lesson-4-Build-Humanoid-Body.md  index.md
docs/Module-2/: Lesson-1-Spawn-Robot-Gazebo.md  Lesson-2-Make-It-Fall-Walk-Get-Up.md  Lesson-3-Add-Real-Sensors.md  Lesson-4-See-Robot-Unity.md  index.md
docs/Module-3/: Lesson-1-Run-Photorealistic-Isaac-Sim.md  Lesson-2-Train-robot-with-pictures.md  Lesson-3-VSLAM-room-mapping.md  Lesson-4-Navigation-with-Nav2.md  index.md
docs/Module-4/: Lesson-1-Voice-Recognition-Integration.md  Lesson-2-GPT-to-Robot-Actions.md  Lesson-3-Final-Project-Voice-Controlled-Humanoid.md  Lesson-4-Deployment-and-Production.md  index.md
history/prompts/constitution/: 1-create-physical-ai-book-constitution.constitution.prompt.md
history/prompts/physical-ai-book/: 1-specify-physical-ai-book.spec.prompt.md  2-plan-physical-ai-book-implementation.plan.prompt.md  (+1 more)
i18n/ur/: code.json
specs/physical-ai-book/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/components/: PersonalizationBanner.js  Quiz.js  RAGChatbot.js
src/css/: custom.css  personalization.css  quiz.css  rag-chatbot.css
src/pages/: chat.css  chat.js
src/services/: api.ts
(+4 files in other folders)
