[project]
name = "rag-chatbot"
version = "0.1.0"
description = "RAG Chatbot for answering questions about book content"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "google-generativeai>=0.3.1",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "cohere>=5.20.0",
    "qdrant-client>=1.16.1",
    "requests>=2.32.5",
    "trafilatura>=2.0.0",
    "sentence-transformers>=2.6.1",
    "torch>=2.1.0",
    "openai>=1.3.5",
    "pypdf>=3.17.0",
    "python-docx>=1.1.0",
    "markdown>=3.3.0"
]

[project.scripts]
start-backend = "backend.main:main"
initialize-rag = "backend.rag_initializer:main"